# nmgui

./: .gitignore  LICENSE  PR_DESCRIPTION.md  README.md  build.sh  nmgui.desktop  pyproject.toml  requirements.txt  run.sh  setup.py  test
app/: ethernet_device.py  ethernet_service.py  main.py  models.py  network_service.py
app/ui/: dialogs.py  ethernet_details.py  main_window.py  network_details.py  network_list.py  styles.py  utils.py  wifi_off.py
docs/: README.md  project-restructure-summary.md
src/nmgui/: __init__.py  __main__.py  models.py  network_service.py
src/nmgui/ui/: main_window.py  network_details.py  network_list.py  styles.py  utils.py  wifi_off.py
