[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nmgui"
description = "A GTK4-based network management application for Linux"
readme = "README.md"
authors = [{name = "Saatvik333", email = "example@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "nmcli>=1.5.0",
    "pycairo>=1.28.0",
    "PyGObject>=3.52.3",
]

[project.optional-dependencies]
dev = [
    "Nuitka>=2.7.12",
    "ordered-set>=4.1.0",
    "zstandard>=0.23.0",
]

[project.scripts]
nmgui = "nmgui.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/nmgui"
Repository = "https://github.com/yourusername/nmgui"